--- a/JavaScript/dom/style.css
+++ b/JavaScript/dom/style.css
@@ -17,3 +17,14 @@ input[type="password"] {
   height: 50px;
   width: 100px;
 }
+
+.todo {
+  font-size: 30px;
+  color: olive;
+}
+
+.done {
+  text-decoration: line-through;
+  color: gray;
+  opacity: 50%;
+}
