--- a/JavaScript/dom_event/style.css
+++ b/JavaScript/dom_event/style.css
@@ -1,5 +1,16 @@
-button {
+/* button {
   position: absolute;
   top: 50px;
   left: 50px;
+} */
+
+.boxes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  height: 100px;
+  width: 100px;
 }
